--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+body{
+	background-color:skyblue;
+}
+div p:first-child{
+	background-color:black;
+	color:white;
+	
+}
+div p:last-child{
+	color:red;
+	
+}
+ul li{
+	background-color:pink;
+    width:400px;
+    padding:10px;
+}
+ul li:nth-child(2n){
+	background-color:slategray;
+}
+ul li:first-child, li:last-child{
+    background-color:white;
+}
